syntax = "proto3";

option go_package = "github.com/ucsb/CS263_project/sleep_tracker/proto";
package proto;

// Server Requests
message SetRequest{
    // Format: user:date
    string key = 1;
    string value = 2;
}

message GetRequest{
    // Format: user:start_date:end_date
    string key = 1;
}

message DeleteRequest{
    // Format: user:date
    string key = 1;
}

// Server Response
message ServerResponse{
    bool success = 1;
    string value = 2;
    string error = 3;
}

// Define service
service SleepTrackerService{
    rpc Set(SetRequest) returns (ServerResponse);
    rpc Get(GetRequest) returns (ServerResponse);
    rpc Delete(DeleteRequest) returns (ServerResponse);
}
